--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
 <body>
 
-Welcome!! 
+Welcome! 
 
 <script>
 
-jmolApplet(1000,"load 1oil.pdb","0", "cartoons on");
+jmolApplet(1000,"load 1oil.pdb","0");
 
 </script>
 
