--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Welcome!
 
 <script>
 
-jmolApplet(400, 'background [xffffff]; set platformspeed 2; load 1oil.pdb; set antialiasdisplay true; set frank off; select all; hbonds off; spin off; wireframe off; spacefill off; trace off;')
+jmolApplet(400, 'background [xffffff]; load 1oil.pdb; set antialiasdisplay true; set frank off; select all; hbonds off; spin off; wireframe off; spacefill off; trace off;')
 </script>
 
 
