--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Welcome!
 
 <script>
 
-jmolApplet(100%, 'background [xffffff]; load 1oil.pdb; set antialiasdisplay true; set frank off; select all; hbonds off; spin off; wireframe off; spacefill off; trace off; set ambient 40; set specpower 40; slab off; ribbons off; cartoons on; label off; monitor off;')
+jmolApplet(1000, 'background [xffffff]; load 1oil.pdb; set antialiasdisplay true; set frank off; select all; hbonds off; spin off; wireframe off; spacefill off; trace off; set ambient 40; set specpower 40; slab off; ribbons off; cartoons on; label off; monitor off;')
 </script>
 
 
