--- a/index.html
+++ b/index.html
@@ -1,36 +1,42 @@
 <!doctype html>
 
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Stuy Proteomics</title>
 
+    <!--Jquery may or may not already come with JSmol but just to be safe we're adding it again-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!--JSmol.min.js is the library that will help us run jmol in HTML.-->
+    <script src="/jmol-res/jsmol/JSmol.min.js"></script>
+    <!--<script src="/jmol-res/jsmol/js/Jmol2.js"></script>-->
+    
+    <script>
+      // jmolInitialize("/jmol-res/jsmol");
+      var InfoLipase = {
+        color: "#FFFFFF",
+        height: 600,
+        width: 600, 
+        script: "load 1oil.pdb; set antialiasdisplay true; set frank off; select all; hbonds off; spin off; wireframe off; " +
+          "spacefill off; trace off; set ambient 40; set specpower 40; slab off; ribbons off; cartoons on; label off; monitor off; color chains;",
+        use: "HTML5",
+        j2sPath: "jmol-res/jsmol/j2s",
+        serverURL: "https://chemapps.stolaf.edu/jmol/jsmol/php/jsmol.php"
+      };
+      $(document).ready(function() {
+        $("#appdiv").html(Jmol.getAppletHtml("jmolApplet0", InfoLipase))
+      })
+    </script>
+  </head>
 
-
-<head>
-
-  <title> Stuy Proteomics </title>
-
-  <script src="/jmol-res/jsmol/JSmol.min.js"></script>
-
-  <script src="/jmol-res/jsmol/js/Jmol2.js"></script>
-
-  <script> jmolInitialize("/jmol-res/jsmol");</script>
-
-</head>
-
-
-
-
-<body>
-
-  <p>Welcome!</p>
-  <p>Displayed below is the <strong>lipase</strong> from the bacterium <i>Burkholderia cepacia</i>.</p>
-
-<script>
-
-jmolApplet(600, 'background [xffffff]; load 1oil.pdb; set antialiasdisplay true; set frank off; select all; hbonds off; spin off; wireframe off; spacefill off; trace off; set ambient 40; set specpower 40; slab off; ribbons off; cartoons on; label off; monitor off; color chains;')
-</script>
-
-
-
-
-</body>
+  <body>
+    <p>Welcome!</p>
+    <p>Displayed below is the <strong>lipase</strong> from the bacterium <i>Burkholderia cepacia</i>.</p>
+    <!--<script>
+      /** Code for the jmol applet **/
+      jmolApplet(600, 'background [xffffff]; load 1oil.pdb; set antialiasdisplay true; set frank off; select all; hbonds off; spin off; wireframe off; spacefill off; trace off; set ambient 40; set specpower 40; slab off; ribbons off; cartoons on; label off; monitor off; color chains;')
+    </script>-->
+    <div id="appdiv"></div>
+  </body>
 
 </html>
