Add jmolapplet variable to index.html init.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     
     <script>
       // jmolInitialize("/jmol-res/jsmol");
+      var jmolApplet0;
+      
       var InfoLipase = {
         color: "#FFFFFF",
         height: 600,
